--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "confiteria-wachatbot",
+  "name": "confiteria-irisarri-ai-chatbot",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -17,6 +17,7 @@
     "#channels/*": "./src/channels/*",
     "#apps/*": "./src/apps/*",
     "#ai/*": "./src/ai/*",
+    "#db/*": "./src/db/*",
     "#storage/*": "./src/storage/*",
     "#utilities/*": "./src/utilities/*",
     "#tools/*": "./src/tools/*",
@@ -24,7 +25,8 @@
     "#res/*": "./res/*",
     "#pages/*": "./src/pages/*",
     "#server/*": "./src/server/*",
-    "#services/*": "./src/services/*"
+    "#services/*": "./src/services/*",
+    "#initData/*": "./src/initData/*"
   },
   "keywords": [],
   "author": "Johan S",
