--- a/package.json
+++ b/package.json
@@ -42,20 +42,20 @@
     "extends": "./eslintrc.json"
   },
   "dependencies": {
-    "axios": "1.11.0",
-    "baileys": "6.7.19",
+    "axios": "1.13.2",
+    "baileys": "7.0.0-rc.8",
     "ejs": "3.1.10",
     "express": "5.1.0",
     "fluent-ffmpeg": "2.1.3",
-    "form-data": "4.0.4",
+    "form-data": "4.0.5",
     "jsonwebtoken": "9.0.2",
-    "link-preview-js": "3.1.0",
-    "mime-types": "3.0.1",
+    "link-preview-js": "4.0.0",
+    "mime-types": "3.0.2",
     "node-cron": "4.2.1",
-    "nodemailer": "7.0.6",
-    "openai": "5.19.1",
+    "nodemailer": "7.0.10",
+    "openai": "6.9.1",
     "pdf-parse-fork": "1.2.0",
-    "pino": "9.9.4",
+    "pino": "10.1.0",
     "qrcode": "1.5.4",
     "qrcode-terminal": "0.12.0"
   }
